Bug 62116 - FILEOPEN .ods created with LibO 3.6: Link behind text lost
Summary: FILEOPEN .ods created with LibO 3.6: Link behind text lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-03-10 16:37 UTC by Rainer Bielefeld Retired
Modified: 2013-04-08 23:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-03-10 16:37:18 UTC
with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 61add5c77de1ff963b839020c77f67f14ef07de) TinderBox: Win-x86@6, Branch:master, Pull Time:  2013-03-05_00:20:08" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile:

1. download / unzip Test kit Attachment 76276 [details] for Bug 62114
2. Open "SampleDocument.ods" from test kit (created with LibO 3.6.5 and
   valid ODF1.2 due to <http://odf-validator2.rhcloud.com/odf-validator2/>
   Bug: Missin Hyperlink in Text in cell A1

Was still ok with 4.0.1.2 and 4.0.0.3

I tried to reproduce that with a new document from the scratch, but I failed
	
The link is really lost after file save from 4.1, so Major due to dataloss
Comment 1 Joel Madero 2013-03-18 17:05:16 UTC
Confirmed. Also note that the text of the link disappears ("this"). Very strange.
Comment 2 Kohei Yoshida 2013-04-08 20:25:12 UTC
Found the cause.  The URL field element was inside a <text:span> element which I didn't anticipate; so the whole segment was skipped during import.

I'm working on a fix for this.  I can push it probably today.
Comment 3 Commit Notification 2013-04-08 23:27:25 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=665cd87e5b594a21b4a2f578564efca7b3f653b8

fdo#62116: Add failing cell content to the test file.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-04-08 23:27:46 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40af04cea332e5311edab8d9c395299c15b7d4ec

fdo#62116: Handle field objects with formats correctly.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-04-08 23:28:04 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11637831312a7a92af9c0148aa6b1e30db4b55b2

fdo#62116: Unit test for the fix.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-04-08 23:28:23 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d64b5cc1c3d232ba42479fe0a3c186ecabd25144

fdo#62116: Be sure to convert relative URLs into absolute ones.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2013-04-08 23:28:42 UTC
Finally fixed it to my satisfaction & added text cases for this.