fdo#62116: Handle field objects with formats correctly.

Field objects can have formats applied to them, and when they do, they
appear inside a <text:span> element.

Change-Id: I7b4346389f393a4ddf708670b2c524a6594128b5